--- a/institucional/style.css
+++ b/institucional/style.css
@@ -377,6 +377,7 @@ img{
 	font-size:12px; 
 	font-weight: normal;
 	color: #666666;
+	margin-bottom: 10px;
 }
 #col_bottom{
   margin: 70px 0 0 20px;
